objects/Pebble_Row__c.object
<CustomObject>
    <description>The individual lines in the Pebble App</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Changes to this require modifications to the Pebble Watch C and javascript code.</description>
        <inlineHelpText>Cycle - cycle between the different text lines for this Row
Post - create a record in Pebble Post
Case - create a new Case record (*)
Chatter - post to Chatter (*)
Reload - Reload the app
[*-Special formatting required see AppExchange instructions]</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cycle</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Reload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Detail__c</fullName>
        <label>Custom Detail</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Note__c</fullName>
        <description>Use this area to store record IDs or other variables that will be used in the Apex code to initiate  the action desired.</description>
        <inlineHelpText>Use this area to store record IDs or other variables that will be used in the Apex code to initiate  the action desired.</inlineHelpText>
        <label>Custom Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <label>Documentation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line1__c</fullName>
        <label>Line1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line2__c</fullName>
        <label>Line2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pebble_App__c</fullName>
        <label>Pebble App</label>
        <referenceTo>Pebble_App__c</referenceTo>
        <relationshipName>Pebble_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>When there are multiple items to be displayed on a row, this determines the Display Order.  There can never be more than 10 items but providing two digits allows for space between rows for insertion of more items without renumbering.</description>
        <inlineHelpText>The order that the item should be displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <description>This defines which row on the Pebble screen this information will be displayed.</description>
        <inlineHelpText>This defines which row on the Pebble screen this information will be displayed.</inlineHelpText>
        <label>Row</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <inlineHelpText>Used to create a unique code for the Post action to use to initiate actions.  Recommended that the code include a separator if you want to part.  eg (&quot;MN1-&quot; or &quot;MN1,&quot;)</inlineHelpText>
        <label>Short Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>A calculated field that is used to help sort the Rows in searches into the correct App and then display row and priority.</description>
        <formula>Pebble_App__r.Name &amp; &quot;-&quot; &amp; TEXT( Row__c ) &amp; &quot;-&quot; &amp; TEXT( Priority__c )</formula>
        <inlineHelpText>A calculated field that is used to help sort the Rows in searches into the correct App and then display row and priority.</inlineHelpText>
        <label>Sort Order</label>
        <type>Text</type>
    </fields>
    <label>Pebble Row</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>Pebble_App__c</columns>
        <columns>Short_Code__c</columns>
        <columns>Action__c</columns>
        <columns>Line1__c</columns>
        <columns>Line2__c</columns>
        <columns>Custom_Note__c</columns>
        <columns>Custom_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chatter</fullName>
        <columns>Pebble_App__c</columns>
        <columns>Line1__c</columns>
        <columns>Line2__c</columns>
        <columns>Short_Code__c</columns>
        <columns>Action__c</columns>
        <columns>Row__c</columns>
        <columns>Priority__c</columns>
        <columns>Custom_Note__c</columns>
        <columns>Custom_Detail__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pebble_App__c</field>
            <operation>equals</operation>
            <value>Chatter</value>
        </filters>
        <label>Chatter</label>
    </listViews>
    <nameField>
        <displayFormat>PR{000000}</displayFormat>
        <label>Pebble Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pebble Row</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>